--- a/Analysis/PostProcessor/Layout.ui
+++ b/Analysis/PostProcessor/Layout.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>887</width>
+    <width>927</width>
     <height>663</height>
    </rect>
   </property>
@@ -23,7 +23,7 @@
    <widget class="QDateTimeEdit" name="startTimeInput">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>106</x>
       <y>4</y>
       <width>194</width>
       <height>22</height>
@@ -39,7 +39,7 @@
    <widget class="QDateTimeEdit" name="endTimeInput">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>386</x>
       <y>4</y>
       <width>194</width>
       <height>22</height>
@@ -61,7 +61,7 @@
    <widget class="QPushButton" name="btn_refresh">
     <property name="geometry">
      <rect>
-      <x>0</x>
+      <x>20</x>
       <y>190</y>
       <width>81</width>
       <height>28</height>
@@ -74,7 +74,7 @@
    <widget class="QTextBrowser" name="text_events">
     <property name="geometry">
      <rect>
-      <x>580</x>
+      <x>606</x>
       <y>230</y>
       <width>291</width>
       <height>221</height>
@@ -84,7 +84,7 @@
    <widget class="QListWidget" name="selectChannel">
     <property name="geometry">
      <rect>
-      <x>730</x>
+      <x>756</x>
       <y>40</y>
       <width>141</width>
       <height>151</height>
@@ -121,7 +121,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>750</x>
+      <x>776</x>
       <y>10</y>
       <width>91</width>
       <height>20</height>
@@ -134,7 +134,7 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>626</x>
       <y>10</y>
       <width>91</width>
       <height>20</height>
@@ -147,7 +147,7 @@
    <widget class="QListWidget" name="selectGroup">
     <property name="geometry">
      <rect>
-      <x>580</x>
+      <x>606</x>
       <y>40</y>
       <width>131</width>
       <height>151</height>
@@ -184,7 +184,7 @@
    <widget class="QLineEdit" name="folderEdit">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>86</x>
       <y>480</y>
       <width>301</width>
       <height>22</height>
@@ -194,7 +194,7 @@
    <widget class="QLineEdit" name="filenameEdit">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>466</x>
       <y>480</y>
       <width>291</width>
       <height>22</height>
@@ -204,7 +204,7 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>36</x>
       <y>480</y>
       <width>55</width>
       <height>16</height>
@@ -217,7 +217,7 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>380</x>
+      <x>406</x>
       <y>480</y>
       <width>55</width>
       <height>16</height>
@@ -230,7 +230,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>580</x>
+      <x>606</x>
       <y>200</y>
       <width>291</width>
       <height>20</height>
@@ -246,7 +246,7 @@
    <widget class="QPushButton" name="btn_zoomsel">
     <property name="geometry">
      <rect>
-      <x>0</x>
+      <x>20</x>
       <y>70</y>
       <width>81</width>
       <height>28</height>
@@ -259,7 +259,7 @@
    <widget class="QPushButton" name="btn_zoomout">
     <property name="geometry">
      <rect>
-      <x>0</x>
+      <x>20</x>
       <y>110</y>
       <width>81</width>
       <height>28</height>
@@ -272,7 +272,7 @@
    <widget class="QPushButton" name="btn_fitall">
     <property name="geometry">
      <rect>
-      <x>0</x>
+      <x>20</x>
       <y>150</y>
       <width>81</width>
       <height>28</height>
@@ -285,7 +285,7 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>740</x>
+      <x>766</x>
       <y>473</y>
       <width>151</width>
       <height>31</height>
@@ -301,7 +301,7 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>41</x>
+      <x>67</x>
       <y>411</y>
       <width>31</width>
       <height>16</height>
@@ -314,7 +314,7 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>135</x>
+      <x>161</x>
       <y>411</y>
       <width>40</width>
       <height>16</height>
@@ -327,7 +327,7 @@
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>324</x>
+      <x>350</x>
       <y>411</y>
       <width>31</width>
       <height>16</height>
@@ -340,7 +340,7 @@
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>256</x>
       <y>411</y>
       <width>41</width>
       <height>16</height>
@@ -353,7 +353,7 @@
    <widget class="QLabel" name="label_11">
     <property name="geometry">
      <rect>
-      <x>418</x>
+      <x>444</x>
       <y>411</y>
       <width>20</width>
       <height>16</height>
@@ -366,7 +366,7 @@
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>513</x>
+      <x>539</x>
       <y>411</y>
       <width>23</width>
       <height>16</height>
@@ -379,7 +379,7 @@
    <widget class="QComboBox" name="combo_function">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>46</x>
       <y>580</y>
       <width>181</width>
       <height>22</height>
@@ -389,7 +389,7 @@
    <widget class="QLabel" name="label_13">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>106</x>
       <y>560</y>
       <width>61</width>
       <height>16</height>
@@ -402,7 +402,7 @@
    <widget class="QLabel" name="label_14">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>626</x>
       <y>560</y>
       <width>55</width>
       <height>16</height>
@@ -415,7 +415,7 @@
    <widget class="QComboBox" name="combo_files">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>626</x>
       <y>580</y>
       <width>181</width>
       <height>22</height>
@@ -435,7 +435,7 @@
    <widget class="QPushButton" name="btn_parse">
     <property name="geometry">
      <rect>
-      <x>789</x>
+      <x>815</x>
       <y>572</y>
       <width>91</width>
       <height>31</height>
@@ -448,7 +448,7 @@
    <widget class="QComboBox" name="combo_times">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>626</x>
       <y>530</y>
       <width>181</width>
       <height>22</height>
@@ -478,7 +478,7 @@
    <widget class="QLabel" name="label_15">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>626</x>
       <y>510</y>
       <width>91</width>
       <height>16</height>
@@ -491,7 +491,7 @@
    <widget class="QFrame" name="mplframe">
     <property name="geometry">
      <rect>
-      <x>90</x>
+      <x>116</x>
       <y>40</y>
       <width>471</width>
       <height>361</height>
@@ -507,7 +507,7 @@
    <widget class="QLabel" name="label_16">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>36</x>
       <y>6</y>
       <width>71</width>
       <height>16</height>
@@ -520,7 +520,7 @@
    <widget class="QLabel" name="label_17">
     <property name="geometry">
      <rect>
-      <x>285</x>
+      <x>311</x>
       <y>6</y>
       <width>71</width>
       <height>16</height>
@@ -533,7 +533,7 @@
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>-20</x>
+      <x>6</x>
       <y>460</y>
       <width>921</width>
       <height>16</height>
@@ -546,7 +546,7 @@
    <widget class="QLabel" name="label_18">
     <property name="geometry">
      <rect>
-      <x>40</x>
+      <x>66</x>
       <y>510</y>
       <width>151</width>
       <height>16</height>
@@ -559,7 +559,7 @@
    <widget class="QComboBox" name="combo_module">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>46</x>
       <y>530</y>
       <width>181</width>
       <height>22</height>
@@ -569,7 +569,7 @@
    <widget class="QLabel" name="label_19">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>336</x>
       <y>506</y>
       <width>231</width>
       <height>20</height>
@@ -582,7 +582,7 @@
    <widget class="QTextBrowser" name="text_docstring">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>246</x>
       <y>530</y>
       <width>371</width>
       <height>81</height>
@@ -592,7 +592,7 @@
    <widget class="QPushButton" name="btn_cutinternalinloc">
     <property name="geometry">
      <rect>
-      <x>790</x>
+      <x>816</x>
       <y>520</y>
       <width>91</width>
       <height>41</height>
@@ -606,7 +606,7 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>36</x>
       <y>430</y>
       <width>561</width>
       <height>24</height>
@@ -657,13 +657,39 @@
      </item>
     </layout>
    </widget>
+   <widget class="QListWidget" name="select_eventtickdisplay">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>270</y>
+      <width>101</width>
+      <height>131</height>
+     </rect>
+    </property>
+    <property name="selectionMode">
+     <enum>QAbstractItemView::MultiSelection</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_20">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>250</y>
+      <width>101</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Select Event ticks</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>887</width>
+     <width>927</width>
      <height>26</height>
     </rect>
    </property>
