--- a/Analysis/PostProcessor/Layout.ui
+++ b/Analysis/PostProcessor/Layout.ui
@@ -62,7 +62,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>190</y>
+      <y>200</y>
       <width>81</width>
       <height>28</height>
      </rect>
@@ -253,7 +253,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>70</y>
+      <y>80</y>
       <width>81</width>
       <height>28</height>
      </rect>
@@ -266,7 +266,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>110</y>
+      <y>120</y>
       <width>81</width>
       <height>28</height>
      </rect>
@@ -279,7 +279,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>150</y>
+      <y>160</y>
       <width>81</width>
       <height>28</height>
      </rect>
@@ -716,6 +716,20 @@
     </property>
     <property name="text">
      <string># Points</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_stride">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>30</y>
+      <width>121</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Reduce Data 
+Points</string>
     </property>
    </widget>
   </widget>
